--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,16 +15,37 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:padding="16dp">
-
-        <EditText
-            android:id="@+id/etSearch"
-            android:hint="Cari Kota Wisata"
+        
+        
+        
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingHorizontal="16dp"
-            android:background="@color/white"
-            android:layout_marginBottom="16dp"
-            android:inputType="text"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp">
+
+            <EditText
+                android:id="@+id/etSearch"
+                android:hint="Cari Kota Wisata"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:paddingHorizontal="16dp"
+                android:background="@android:drawable/edit_text"
+                android:layout_marginBottom="16dp"
+                android:inputType="text"/>
+            
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/ivProfile"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/rounded_account_circle_24"/>
+
+        </LinearLayout>
+
+
 
         <TextView
             android:layout_width="wrap_content"
