--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,7 @@
         android:layout_marginBottom="24dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp"
+        android:layout_marginTop="50dp"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <LinearLayout
@@ -76,6 +77,47 @@
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:textColor="@android:color/white"/>
 
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:cardCornerRadius="14dp"
+                app:cardElevation="2dp"
+                android:backgroundTint="#E3F2FD">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Informasi Akun"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="#0D47A1"
+                        android:layout_marginBottom="8dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Aplikasi : Tour Guide Booking"
+                        android:textSize="14sp"
+                        android:textColor="#333333"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pengguna dapat melakukan pemesanan, melihat riwayat booking, serta mengelola data sesuai dengan hak akses yang dimiliki."
+                        android:textSize="14sp"
+                        android:textColor="#333333"/>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
